--- a/public/login.html
+++ b/public/login.html
@@ -19,7 +19,7 @@
             <button type="button" onclick="mudaLogin()">Criar Conta</button>
         </div>
     </form>
-    <form action="post" id="criaLogin">
+    <form action="/criarUsuario" method="post" id="criaLogin">
         <div id="login">
             <img src="./img/imagem_2025-05-11_183426377-removebg-preview.png" alt="">
             <input type="text" name="" id="criaUsuario" placeholder="Digite seu nome de usuario"><br>
