--- a/public/login.html
+++ b/public/login.html
@@ -19,14 +19,14 @@
             <button type="button" onclick="mudaLogin()">Criar Conta</button>
         </div>
     </form>
-    <form action="/criarUsuario" method="post" id="criaLogin">
+    <form action="/criarUsuario" method="post" id="criaLogin" onsubmit="return verificaSenha()">
         <div id="login">
             <img src="./img/imagem_2025-05-11_183426377-removebg-preview.png" alt="">
-            <input type="text" name="" id="criaUsuario" placeholder="Digite seu nome de usuario"><br>
-            <input type="email" name="" id="criaEmail" placeholder="Digite seu email"><br> 
-            <input type="password" name="" id="criaSenha" placeholder="Digite sua senha"><br>
-            <input type="password" name="" class="" placeholder="Repita sua senha"><br>
-            <button type="submit" >Criar usuario</button>
+            <input type="text" name="usuario" id="criaUsuario" placeholder="Digite seu nome de usuario" required><br>
+            <input type="email" name="email" id="criaEmail" placeholder="Digite seu email" required><br> 
+            <input type="password" name="senha" id="criaSenha" placeholder="Digite sua senha" required><br>
+            <input type="password" name="senhaRep" id="senhaRep" placeholder="Repita sua senha" required><br>
+            <button type="" >Criar usuario</button>
         </div>
     </form>
     </div>
