--- a/public/login.html
+++ b/public/login.html
@@ -10,7 +10,7 @@
 <body>
 
     <div id="container">
-    <form action="" id="loginE">
+    <form action="/validaUsuario" method="get" id="loginE">
         <div id="login">
             <img src="./img/imagem_2025-05-11_183426377-removebg-preview.png" alt="">
             <input type="text" name="" id="" placeholder="Digite seu nome de usuario"><br>
