Arrumando a adição de usuarios

--- a/public/login.html
+++ b/public/login.html
@@ -22,9 +22,9 @@
     <form action="/criarUsuario" method="post" id="criaLogin" onsubmit="return verificaSenha()">
         <div id="login">
             <img src="./img/imagem_2025-05-11_183426377-removebg-preview.png" alt="">
-            <input type="text" name="usuario" id="criaUsuario" placeholder="Digite seu nome de usuario" required><br>
-            <input type="email" name="email" id="criaEmail" placeholder="Digite seu email" required><br> 
-            <input type="password" name="senha" id="criaSenha" placeholder="Digite sua senha" required><br>
+            <input type="text" name="usuarioN" id="criaUsuario" placeholder="Digite seu nome de usuario" required><br>
+            <input type="email" name="emailN" id="criaEmail" placeholder="Digite seu email" required><br> 
+            <input type="password" name="senhaN" id="criaSenha" placeholder="Digite sua senha" required><br>
             <input type="password" name="senhaRep" id="senhaRep" placeholder="Repita sua senha" required><br>
             <button type="" >Criar usuario</button>
         </div>
