--- a/public/login.html
+++ b/public/login.html
@@ -10,11 +10,11 @@
 <body>
 
     <div id="container">
-    <form action="/validaUsuario" method="get" id="loginE">
+    <form action="/validaUsuario" method="post" id="loginE">
         <div id="login">
             <img src="./img/imagem_2025-05-11_183426377-removebg-preview.png" alt="">
-            <input type="text" name="" id="" placeholder="Digite seu nome de usuario"><br>
-            <input type="password" name="" id="" placeholder="Digite sua senha"><br>
+            <input type="email" name="email" id="" placeholder="Digite seu e-mail"><br>
+            <input type="password" name="senha" id="" placeholder="Digite sua senha"><br>
             <button type="submit">Entrar</button>
             <button type="button" onclick="mudaLogin()">Criar Conta</button>
         </div>
@@ -26,7 +26,7 @@
             <input type="email" name="emailN" id="criaEmail" placeholder="Digite seu email" required><br> 
             <input type="password" name="senhaN" id="criaSenha" placeholder="Digite sua senha" required><br>
             <input type="password" name="senhaRep" id="senhaRep" placeholder="Repita sua senha" required><br>
-            <button type="" >Criar usuario</button>
+            <button type="submit" >Criar usuario</button>
         </div>
     </form>
     </div>
